# flask-starter

./: README.md  pyproject.toml
app/static/: package-lock.json  package.json
