[tool.poetry]
name = "flask-starter"
version = "0.1.0"
description = "Starting point for my Flask applications run on Google Cloud Run"
authors = ["Jared Sulzdorf <j.sulzdorf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
Flask = "^3.0.2"
gunicorn = "^21.2.0"
SQLAlchemy = "^2.0.25"
pg8000 = "^1.30.4"
cloud-sql-python-connector = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
